# agenta

./: .env.example  .gitignore  README.md  pyproject.toml  railway.toml
app/: settings.py
app/agent/: graph.py  models.py  nodes.py  prompts.py  schemas.py  state.py
app/agent/tools/: __init__.py  base.py  code.py  conclude.py  reason.py  search.py
app/api/: main.py  schemas.py
app/chat/: __init__.py  chat.py
app/persistence/: checkpointer.py  run_store.py
app/tools/: based.py
docs/assets/: agenta_v1_architecture.mmd
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
scripts/: run_cli.py
tests/: test_analyze.py  test_api.py  test_chat.py  test_checkpointer.py  test_graph.py  test_run_store.py  test_tools.py
