[project]
name = "agentmake"
version = "0.1.0"
description = "Autonomous AI agent (AgentGPT rebuild) on LangChain + LangGraph — free stack"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.14.4",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "langchain>=1.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.2",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sse-starlette>=3.4.4",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.49.0",
]

# This is an application, not a library — no build-system needed.
# uv treats it as a non-packaged ("virtual") project and won't try to install it.

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.17",
]
